--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {background-color: rgb(223, 223, 223);} 
 
-*{padding: 0px 20px 0px 20px ;}
+*{padding: 0px 1% 0px 1% ;}
 p{font-size:12pt}
 h1,h2{text-align:center}
